ClientCredentials agora é estatico e melhor legibilidade

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-ACESS_TOKEN=SEU_TOKEN
-FILE_ID=ID_ARQUIVO
-FILE_KEY=HASK_ARQUIVO
+UFS_KEY=SUACHAVE
+UFS_SECRET=SEUSEGREDO
+UFS_REDIRECT_URI=http://url.de/retorno
+
+FILE_ID=123123
+FILE_KEY=123133123123
